[tool.poetry]
name = "ritmos-do-coracao-chat"
version = "0.1.0"
description = "Chatbot para doações da ONG Ritmos do Coração"
authors = ["kleuvyn <your-email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rasa = "3.6.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"